Maciorowski_Ben_Asg4/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/PlugIns/jdk/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Users/unknown1/Dropbox/School/Programming 1502/Maciorowski_Ben_Asg4
-d
/Users/unknown1/Dropbox/School/Programming 1502/Maciorowski_Ben_Asg4/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/unknown1/Dropbox/School/Programming 1502/Maciorowski_Ben_Asg4/StableManager.java
<---- end of javadoc command ---->
Loading source file /Users/unknown1/Dropbox/School/Programming 1502/Maciorowski_Ben_Asg4/StableManager.java...
Constructing Javadoc information...
/Users/unknown1/Dropbox/School/Programming 1502/Maciorowski_Ben_Asg4/userCommunication/UserInteraction.java:122: error: unmappable character for encoding UTF-8
	 * @param args Arguments referenced by the format specifiers in the format string. If there are more arguments than format specifiers, the extra arguments are ignored. The number of arguments is variable and may be zero. The maximum number of arguments is limited by the maximum dimension of a Java array as defined by The Java? Virtual Machine Specification. The behaviour on a null argument depends on the conversion.
	                                                                                                                                                                                                                                                                                                                                       ^
/Users/unknown1/Dropbox/School/Programming 1502/Maciorowski_Ben_Asg4/userCommunication/UserInteraction.java:134: error: unmappable character for encoding UTF-8
	 * @param args Arguments referenced by the format specifiers in the format string. If there are more arguments than format specifiers, the extra arguments are ignored. The number of arguments is variable and may be zero. The maximum number of arguments is limited by the maximum dimension of a Java array as defined by The Java? Virtual Machine Specification. The behaviour on a null argument depends on the conversion.
	                                                                                                                                                                                                                                                                                                                                       ^
Standard Doclet version 1.7.0_21
Building tree for all the packages and classes...
Generating /Users/unknown1/Dropbox/School/Programming 1502/Maciorowski_Ben_Asg4/doc/StableManager.html...
Generating /Users/unknown1/Dropbox/School/Programming 1502/Maciorowski_Ben_Asg4/doc/package-frame.html...
Generating /Users/unknown1/Dropbox/School/Programming 1502/Maciorowski_Ben_Asg4/doc/package-summary.html...
Generating /Users/unknown1/Dropbox/School/Programming 1502/Maciorowski_Ben_Asg4/doc/constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating /Users/unknown1/Dropbox/School/Programming 1502/Maciorowski_Ben_Asg4/doc/allclasses-frame.html...
Generating /Users/unknown1/Dropbox/School/Programming 1502/Maciorowski_Ben_Asg4/doc/allclasses-noframe.html...
Generating /Users/unknown1/Dropbox/School/Programming 1502/Maciorowski_Ben_Asg4/doc/index.html...
Generating /Users/unknown1/Dropbox/School/Programming 1502/Maciorowski_Ben_Asg4/doc/stylesheet.css...
2 warnings
